--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@syncfusion/ej2-base": "^20.1.61",
     "@syncfusion/ej2-charts": "^20.1.61",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
-    "@syncfusion/ej2-react-charts": "^19.4.50",
+    "@syncfusion/ej2-react-charts": "^20.2.36",
     "@syncfusion/ej2-react-dropdowns": "^19.4.52",
-    "@syncfusion/ej2-react-grids": "^19.4.50",
+    "@syncfusion/ej2-react-grids": "^19.4.56",
     "@syncfusion/ej2-react-inputs": "^19.4.52",
     "@syncfusion/ej2-react-kanban": "^19.4.48",
     "@syncfusion/ej2-react-popups": "^19.4.52",
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
